# finance_forecaster

./: .gitignore  LICENSE  Makefile  PHASE1.md  PHASE2.md  PHASE3.md  Phase1_README.md  README.md  app.py  cloudbuild.yaml  config_cpu.yaml  config_gpu.yaml  docker-compose.yaml  finance_forecaster_notebook.ipynb  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml  cml.yml  deploy-hf.yml  docker-build.yml
api/: README.md  gcf_main.py  main.py  schemas.py
configs/: config.py  config.yaml
configs/experiment/: baseline.yaml  quick_test.yaml
data/: README.md  download.py  processed.dvc  raw.dvc
dockerfiles/: Dockerfile  README.md  backtest.dockerfile  data.dockerfile  predict.dockerfile  train.dockerfile
docs/: GCP Instructions.txt  PHASE1.md  PHASE2.md  PHASE3.md  api.md  getting_started.md  index.md  mkdocs.yml
models/: train_model.py
notebooks/: README.md  finance_forecaster_notebook.ipynb
predictions/: predictions.csv
reports/: baseline_results.md  ensemble_regimes_explanation.txt  next_day_ensemble_prediction.txt  trade_performance.txt
reports/profiling/: cprofile_results.txt  training_profile.out
scripts/: baseline_run.py  clean.py  profile_training.py
src/finance_forecaster/: __init__.py  config.py  logging_config.py  main.py  pipeline.py  predict_model.py  train_model.py
src/finance_forecaster/data/: __init__.py  loaders.py  make_dataset.py
src/finance_forecaster/features/: __init__.py  build_features.py  features.py
src/finance_forecaster/models/: arima.py  garch.py  lstm.py  stationarity.py
src/finance_forecaster/no_evaluation/: __init__.py
src/finance_forecaster/no_models/: __init__.py  garch.py  lstm.py  model.py  stationarity.py
src/finance_forecaster/utils/: __init__.py
tests/: not used_test_model.py  regime_aware_backtest.py  test_api.py  test_data.py
(+3 files in other folders)
