[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance_forecaster"
version = "0.1.0"
description = "Finance Forecasting ML Model Pipeline -- Predicting Next Day Financial Movements"
authors = [
    {name = "Finance Forecasters", email = "financeforecasters.mlops489@gmail.com"}
]
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "matplotlib>=3.9.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "mlflow>=2.16.0",
    "rich>=13.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "dvc>=3.55.0",
    "yfinance>=0.2.0",
    "statsmodels>=0.14.0",
    "arch>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    "data/download.py",
    "tests/regime_aware_backtest.py",
    "configs/config.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = [
    "N806",  # ML convention: X_train, X_test uppercase is standard
    "N803",  # ML convention: X argument uppercase is standard
    "B905",  # zip() strict= not needed for internal ML data pairing
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "finance_forecaster.models.garch"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.setuptools.packages.find]
where = ["src"]
